force-app/main/default/objects/OWD__c/OWD__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Object Wide Definition : This Custom Setting is to store static value of fields for usage of whole Org.</description>
    <label>OWD</label>
</CustomObject>