force-app/main/default/objects/OWD__c/fields/Oppty_Stage0__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Stage0__c</fullName>
    <description>To store value of: 
Object: Opportunity 
Field: StageName 
Value: Lost, Cancelled - 0%</description>
    <label>Oppty_Stage0</label>
    <length>50</length>
    <type>Text</type>
</CustomField>