force-app/main/default/objects/OWD__c/fields/Oppty_Stage100__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Stage100__c</fullName>
    <description>To store value of: 
Object: Opportunity 
Field: StageName 
Value: Win - 100%</description>
    <label>Oppty_Stage100</label>
    <length>50</length>
    <type>Text</type>
</CustomField>