force-app/main/default/objects/OWD__c/fields/Oppty_Stage10__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Stage10__c</fullName>
    <description>To store value of: 
Object: Opportunity
Field: StageName
Value: Discover - 10%</description>
    <label>Oppty_Stage10</label>
    <length>50</length>
    <type>Text</type>
</CustomField>